test/compilable/rdmd_compiler.d
// COMPILER: rdmd
// PERMUTE_ARGS:
// REQUIRED_ARGS: --compiler=${DMD}

void main()
{
}
